// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshots should match the full width snapshot 1`] = `
<button
  className="px-4 h-8 rounded shadow bg-red-lightest text-red-dark font-semibold border border-red-lighter hover:bg-red-lighter w-full"
  onClick={[Function]}
  type="submit"
>
  I am a button!
</button>
`;

exports[`Button Snapshots should match the primary snapshot 1`] = `
<button
  className="px-4 h-8 rounded shadow bg-red-lightest text-red-dark font-semibold border border-red-lighter hover:bg-red-lighter"
  onClick={[Function]}
  type="submit"
>
  I am a button!
</button>
`;

exports[`Button Snapshots should match the secondary snapshot 1`] = `
<button
  className="px-4 h-8 rounded shadow bg-white text-red-darkest border border-red-lighter hover:bg-red-lightest"
  onClick={[Function]}
  type="submit"
>
  I am a button!
</button>
`;
